Fix overflow hidden

--- a/assets/scss/components/_404.scss
+++ b/assets/scss/components/_404.scss
@@ -12,7 +12,7 @@
 
     @media screen and (max-width: 800px) {
       height: 100vh;
-      overflow-y: hidden;
+      overflow: hidden;
     }
 
     .error__text {
